--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -15,6 +15,9 @@ build:
                     # version: 8.1.13
                     # version: 8.1.17
                     # version: 8.2.4
+            before_tests:
+                - php bin/console doctrine:database:create --env=test
+                - php bin/console doctrine:migrations:migrate --env=test --no-interaction
         analysis:
             tests:
                 override:
