--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -15,9 +15,6 @@ build:
                     # version: 8.1.13
                     # version: 8.1.17
                     # version: 8.2.4
-            before_tests:
-                - php bin/console doctrine:database:create --env=test
-                - php bin/console doctrine:migrations:migrate --env=test --no-interaction
         analysis:
             tests:
                 override:
@@ -25,7 +22,7 @@ build:
                     #- phpcs-run # Not used, missing config file
     tests:
         override:
-            -   command: "composer phpunit"
+            -   command: "composer install && php bin/console doctrine:database:create --env=test && php bin/console doctrine:migrations:migrate --env=test && composer phpunit"
                 # command: "XDEBUG_MODE=coverage vendor/bin/phpunit"
                 coverage:
                     file: "docs/coverage.clover"
