--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -13,3 +13,5 @@ when@test:
         test: true
         session:
             storage_factory_id: session.storage.factory.mock_file
+            save_path: '%kernel.project_dir%/var/sessions'
+            cookie_secure: auto
